<resources>
    <string name="app_name">Implicit Intents</string>

    <string name="edittext_uri">http://developer.android.com/</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="button_open_website_text">Open Website</string>

    <string name="error_message">Can\'t handle this!</string>
    <string name="button_pic">Take a picture</string>
</resources>