<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/website_edittext"
        style="@style/editTextMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_uri" />

    <Button
        android:id="@+id/open_website_button"
        style="@style/buttonMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openWebsite"
        android:text="@string/button_uri" />

    <EditText
        android:id="@+id/location_edittext"
        style="@style/editTextMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_loc" />

    <Button
        android:id="@+id/open_location_button"
        style="@style/buttonMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLocation"
        android:text="@string/button_loc" />

    <EditText
        android:id="@+id/share_edittext"
        style="@style/editTextMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edittext_share" />

    <Button
        android:id="@+id/share_text_button"
        style="@style/buttonMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="shareText"
        android:text="@string/button_share" />

    <Button
        android:id="@+id/take_picture_button"
        style="@style/buttonMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:onClick="takePicture"
        android:text="@string/button_pic" />
</LinearLayout>